--- a/claims-api/requirements-test.txt
+++ b/claims-api/requirements-test.txt
@@ -1,5 +1,8 @@
 pytest==7.4.3
-pytest-mock==3.12.0
+pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 httpx==0.25.2
+coverage==7.3.2
+pytest-mock==3.12.0
+pytest-env==1.1.1
 python-multipart==0.0.6 
